--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons-kit": "^1.1.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "semantic-ui-react": "^0.82.1",
     "spotify-web-api-js": "^0.24.0"
   },
   "scripts": {
