--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
-    "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.1",
     "react-icons-kit": "^1.1.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-react": "^0.82.1",
-    "spotify-web-api-js": "^0.24.0"
+    "spotify-web-api-js": "^0.24.0",
+    "express": "^4.16.2",
+    "nodemon": "^1.18.3"
   },
   "scripts": {
-    "start": "react-scripts start | node authorization_code/app.js",
+    "start": "concurrently --kill-others-on-fail \"node authorization_code/app.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -26,7 +27,9 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^1.2.0",
+    "concurrently": "^3.5.0"
   },
-  "homepage": "https://alex-dinh.github.io/medlify"
+  "homepage": "https://alex-dinh.github.io/medlify",
+  "proxy": "http://localhost:8888/"
 }
