--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "nodemon": "^1.18.3",
     "npm": "^6.3.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.1",
+    "react-dropzone": "^5.0.1",
     "react-icons-kit": "^1.1.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-react": "^0.82.1",
-    "spotify-web-api-js": "^0.24.0",
-    "express": "^4.16.2",
-    "nodemon": "^1.18.3"
+    "spotify-web-api-js": "^0.24.0"
   },
   "scripts": {
-    "start": "concurrently --kill-others-on-fail \"node authorization_code/app.js\" \"react-scripts start\"",
+    "start": "concurrently --kill-others-on-fail \"nodemon authorization_code/app.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
