--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-react": "^0.82.1",
-    "soundcloud": "^3.3.0",
+    "soundcloud-audio": "^1.3.1",
     "spotify-web-api-js": "^0.24.0"
   },
   "scripts": {
